# energy_scheduler

./: .gitignore  AGENTS.md  README.md  description.md  pyproject.toml
data/: benchmark_runs.sqlite3
docs/: api.md  architecture.md  backend-runbook.md  cli-reference.md  comparison-workflow.md  custom-scheduler.md  energy-collection.md  ops-checklist.md  performance-collection.md  sched-ext.md  scheduler-energy-analysis.md  setup.md  storage-and-results.md  workloads.md
src/energy_scheduler/: __init__.py  api.py  cli.py  compare.py  config.py  doctor.py  leaderboard.py  models.py  runner.py  storage.py
src/energy_scheduler/collectors/: __init__.py  base.py  perf_info.py  perf_stat.py  process_usage.py  rapl.py  runtime.py
src/energy_scheduler/schedulers/: __init__.py  base.py  default.py  sched_ext.py  simulated.py
src/energy_scheduler/web/: app.js  index.html  styles.css
src/energy_scheduler/workloads/: __init__.py  application.py  base.py  synthetic.py
